Mostly fix cat shifting from scrollbar changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,6 +51,7 @@ body {
 body {
   color: var(--text-color);
   background: var(--background);
+  overflow-y: scroll;
 }
 
 #app-container {
